@@ -9,7 +9,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tkFileFilter.c,v 1.4 2000/07/06 03:17:43 mo Exp $
+ * RCS: @(#) $Id: tkFileFilter.c,v 1.5 2002/01/27 11:10:50 das Exp $
  */
 
 #include "tkInt.h"
@@ -17,7 +17,7 @@
 
 static int		AddClause _ANSI_ARGS_((
 			    Tcl_Interp * interp, FileFilter * filterPtr,
-			    char * patternsStr, char * ostypesStr,
+			    CONST char * patternsStr, CONST char * ostypesStr,
 			    int isWindows));
 static void		FreeClauses _ANSI_ARGS_((FileFilter * filterPtr));
 static void		FreeGlobPatterns _ANSI_ARGS_((
@@ -25,7 +25,7 @@ static void		FreeGlobPatterns _ANSI_ARGS_((
 static void		FreeMacFileTypes _ANSI_ARGS_((
 			    FileFilterClause * clausePtr));
 static FileFilter *	GetFilter _ANSI_ARGS_((FileFilterList * flistPtr,
-			    char * name));
+			    CONST char * name));
 
 /*
  *----------------------------------------------------------------------
@@ -86,8 +86,8 @@ TkGetFileFilters(interp, flistPtr, string, isWindows)
     int isWindows;		/* True if we are running on Windows. */
 {
     int listArgc;
-    char ** listArgv = NULL;
-    char ** typeInfo = NULL;
+    CONST char ** listArgv = NULL;
+    CONST char ** typeInfo = NULL;
     int code = TCL_OK;
     int i;
 
@@ -206,16 +206,16 @@ TkFreeFileFilters(flistPtr)
 static int AddClause(interp, filterPtr, patternsStr, ostypesStr, isWindows)
     Tcl_Interp * interp;	/* Interpreter to use for error reporting. */
     FileFilter * filterPtr;	/* Stores the new filter clause */
-    char * patternsStr;		/* A TCL list of glob patterns. */
-    char * ostypesStr;		/* A TCL list of Mac OSType strings. */
+    CONST char * patternsStr;		/* A TCL list of glob patterns. */
+    CONST char * ostypesStr;		/* A TCL list of Mac OSType strings. */
     int isWindows;		/* True if we are running on Windows; False
 				 * if we are running on the Mac; Glob
 				 * patterns need to be processed differently
 				 * on these two platforms */
 {
-    char ** globList = NULL;
+    CONST char ** globList = NULL;
     int globCount;
-    char ** ostypeList = NULL;
+    CONST char ** ostypeList = NULL;
     int ostypeCount;
     FileFilterClause * clausePtr;
     int i;
@@ -358,7 +358,7 @@ static int AddClause(interp, filterPtr, patternsStr, ostypesStr, isWindows)
 static FileFilter * GetFilter(flistPtr, name)
     FileFilterList * flistPtr;	/* The FileFilterList that contains the
 				 * newly created filter */
-    char * name;		/* Name of the filter. It is usually displayed
+    CONST char * name;		/* Name of the filter. It is usually displayed
 				 * in the "File Types" listbox in the file
 				 * dialogs. */
 {
